--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">School</a></li>
-            <li><a href="#">Exposure</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Other</a></li>
-            <li><a href="#">Contact</a></li>
+        <ul class="ul-class">
+            <li class="nav-buttons"><a href="index.html">Home</a></li>
+            <li class="nav-buttons"><a href="#">About</a></li>
+            <li class="nav-buttons"> <a href="#">School</a></li>
+            <li class="nav-buttons"><a href="#">Exposure</a></li>
+            <li class="nav-buttons"><a href="#">Projects</a></li>
+            <li class="nav-buttons"><a href="#">Other</a></li>
+            <li class="nav-buttons"><a href="#">Contact</a></li>
         </ul>
     </nav>
     <main>
