--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <title>Home Page</title>
 </head>
 <body>
-    <nav>
-        <ul class="ul-class">
-            <li class="nav-buttons"><a href="index.html">Home</a></li>
-            <li class="nav-buttons"><a href="#">About</a></li>
-            <li class="nav-buttons"> <a href="#">School</a></li>
-            <li class="nav-buttons"><a href="#">Exposure</a></li>
-            <li class="nav-buttons"><a href="#">Projects</a></li>
-            <li class="nav-buttons"><a href="#">Other</a></li>
-            <li class="nav-buttons"><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <p>Text!</p>
-    </main>
+    <div container ="container">
+        <logo>
+            <img src="#" alt="Logo">
+        </logo>
+        <nav>
+            <ul class="ul-class">
+                <li class="nav-buttons"><a href="index.html" class="index">Home</a></li>
+                <li class="nav-buttons"><a href="#" class="about">About</a></li>
+                <li class="nav-buttons"><a href="#" class="school">School</a></li>
+                <li class="nav-buttons"><a href="#" class="exposure">Exposure</a></li>
+                <li class="nav-buttons"><a href="#" class="projects">Projects</a></li>
+                <li class="nav-buttons"><a href="#" class="other">Other</a></li>
+                <li class="nav-buttons"><a href="#" class="contact">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <p>Welcome to my Personal Page! Here you can find all that I have to showcase from my education to personal projects and artistic outlets, I hope you find something that strikes your interest.</p>
+        </main>
+    </div>
 </body>
 </html>
