update to fix container issue

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    <div container ="container">
-        <logo>
+    <div class="container">
             <img src="#" alt="Logo">
-        </logo>
         <nav>
             <ul class="ul-class">
                 <li class="nav-buttons"><a href="index.html" class="index">Home</a></li>
