--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </ul>
         </nav>
         <main>
-            <p>Welcome to my Personal Page! Here you can find all that I have to showcase from my education to personal projects and artistic outlets, I hope you find something that strikes your interest.</p>
+            <p>Welcome to my Personal Page! Here you can find all that I have to showcase from my education to personal projects and artistic outlets, I hope you find something that strikes your interest.
+                test
+            </p>
         </main>
     </div>
 </body>
