--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul class="ul-class">
                 <li class="nav-buttons"><a href="index.html" class="index">Home</a></li>
                 <li class="nav-buttons"><a href="#" class="about">About</a></li>
-                <li class="nav-buttons"><a href="#" class="school">School</a></li>
-                <li class="nav-buttons"><a href="#" class="exposure">Exposure</a></li>
+                <li class="nav-buttons"><a href="#" class="school">Education</a></li>
+                <li class="nav-buttons"><a href="#" class="exposure">Experience</a></li>
                 <li class="nav-buttons"><a href="#" class="projects">Projects</a></li>
                 <li class="nav-buttons"><a href="#" class="other">Other</a></li>
                 <li class="nav-buttons"><a href="#" class="contact">Contact</a></li>
