--- a/about.html
+++ b/about.html
@@ -22,13 +22,21 @@
       </ul>
     </nav>
     <main>
-      <p class="title">Home Page</p>
-      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo" />
+      <p class="title">About Page</p>
+
       <p>
-        My Name is Alex Lalama. Welcome to my personal page. Here I have
-        showcased my projects, experience and other hobbies that I am working on
-        or have completed. I wish you find some interests that are similar and
-        look to connect!
+        As you probably know, my name is Alex Lalama. I currently live in New
+        Jersey and have a ton of hobbies including producing music, reading,
+        drawing, coding, and enjoying nature. I currently attend Rutgers
+        University. If you would like to read more about my courses, professors,
+        and previous education such as where I transferred from before Rutgers,
+        please visit my <a href="education.html">Education</a> page.
+        <br /><br />
+        I have an interest in digitally producing music and learning new things.
+        After college, I aim to work in the tech or music industry where I can
+        expand my design skills within coding, using DAWS, and instruments. To
+        find more about my specific hobbies and what I have created you can
+        visit my <a href="hobbies.html">Hobbies</a> page.
       </p>
     </main>
     <footer>
