--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Alex's Page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href=".\assets\css\index.css" />
   </head>
   <body>
     <nav>
