hopefully this fixes

--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Alex's Page</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body>
     <nav>
@@ -31,7 +31,7 @@
         University. If you would like to read more about my courses, professors,
         and previous education such as where I transferred from before Rutgers,
         please visit my <a href="education.html">Education</a> page.
-        <br /><br />
+        <br><br>
         I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
         expand my design skills within coding, using DAWS, and instruments. To
@@ -44,7 +44,7 @@
         <a href="index.html">Home </a>
         <a href="contact.html">Contact</a>
       </div>
-      &copy Alex Lalama 2024
+      &copy; Alex Lalama 2024
     </footer>
   </body>
 </html>
