--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Alex's Page</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body>
     <nav>
@@ -23,7 +23,7 @@
     </nav>
     <main>
       <p class="title">Home Page</p>
-      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo" />
+      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo">
       <p>
         My Name is Alex Lalama. Welcome to my personal page. Here I have
         showcased my projects, experience and other hobbies that I am working on
@@ -36,7 +36,7 @@
         <a href="index.html">Home </a>
         <a href="contact.html">Contact</a>
       </div>
-      &copy Alex Lalama 2024
+      &copy; Alex Lalama 2024
     </footer>
   </body>
 </html>
