--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Alex's Page</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body>
     <nav>
@@ -26,7 +26,7 @@
       <a href="www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"
         >Alex Lalama</a
       >
-      <br />
+      <br>
       Email:
       <a href=""></a>
     </main>
