--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo.png">
   </head>
   <body>
     <nav>
