too many changes to explain :

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,11 @@
     <main>
       <p class="title">Contact Page</p>
       LinkedIn:
-      <a href="www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"
-        >Alex Lalama</a
-      >
+      <a href="https://www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank">Alex Lalama</a>
       <br>
       Email:
-      <a href=""></a>
+      <a href="mailto:anl116@rutgers.edu">Alex Lalama</a><br>
+      <a href="https://www.youtube.com/@alexlalama" target="_blank">YouTube</a>
     </main>
   </body>
 </html>
