--- a/education.html
+++ b/education.html
@@ -23,14 +23,13 @@
       </ul>
     </nav>
     <main>
-      <p class="title">Home Page</p>
-      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo">
-      <p>
-        My Name is Alex Lalama. Welcome to my personal page. Here I have
-        showcased my projects, experience and other hobbies that I am working on
-        or have completed. I wish you find some interests that are similar and
-        look to connect!
-      </p>
+      <p class="title">Education Page</p>
+      <ul>
+        <li>Rochester Institute of Technology</li>
+        <li>Rutgers University</li>
+        <li>Old Bridge High School</li>
+
+      </ul>
     </main>
     <footer>
       <div class="footer-links">
