--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
       <p class="title">Home Page</p>
-      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo">
+      <img src="./assets/imgs/personal_photo.jpg" id = "personal"alt="personal_photo">
       <p>
         My Name is Alex Lalama. Welcome to my personal page. Here I have
         showcased my projects, experience and other hobbies that I am working on
