--- a/hobbies.html
+++ b/hobbies.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="icon" type="image/x-icon" href="./assets/imgs/logo.png">
+    <script defer src="./assets/js/hobbiesScript.js"></script>
   </head>
-  <body>
+  <body onload="init();">
     <nav>
       <ul>
         <li class="nav"><a href="index.html" class="home">Home</a></li>
@@ -23,14 +24,29 @@
       </ul>
     </nav>
     <main>
-      <p class="title">Home Page</p>
-      <img src="./assets/imgs/personal_photo.jpg" alt="personal_photo">
-      <p>
-        My Name is Alex Lalama. Welcome to my personal page. Here I have
-        showcased my projects, experience and other hobbies that I am working on
-        or have completed. I wish you find some interests that are similar and
-        look to connect!
-      </p>
+      <p class="title">Hobbies Page</p>
+      
+      <p>Below are things I have created and more specific information about my hobbies.</p>
+
+      <h3>Photography</h3>
+        <figure id ="bigPlace">
+            <img src = "./assets/imgs/photo01.png" alt = "Big Photo Holder" id = "bigPic">
+            <figcaption id="cap"></figcaption>
+        </figure>
+        <section class = "table">
+            <div id = "imgHolder">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo01.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo02.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo03.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo04.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo05.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo06.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo07.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+                <img onclick="changeMe(this)" src="./assets/imgs/photo08.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+            </div>
+        </section>
+      <h3>Videography</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/cOxuIegU408?si=8mrOtLJwGfHk0usT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </main>
     <footer>
       <div class="footer-links">
