--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         drawing, coding, and enjoying nature. I currently attend Rutgers
         University. If you would like to read more about my courses, professors,
         and previous education such as where I transferred from before Rutgers,
-        please visit my <a href="education.html">Education</a> section.
+        please visit my <a href="#educationSection">Education</a> section.
         <br><br>
         I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
         expand my design skills within coding, using DAWS, and instruments. To
         find more about my specific hobbies and what I have created you can
-        visit my <a href="hobbies.html">Hobbies</a> section.
+        visit my <a href="#hobbiesSection">Hobbies</a> section.
       </p>
       </section>
       <section id="projectsSection">
@@ -115,7 +115,7 @@
     </figure>
     <section class = "table">
         <div id = "imgHolder">
-            <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo01.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
+            <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo01.png" border = "0" onmouseover="this.style.cursor='pointer';">
             <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo02.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
             <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo03.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
             <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo04.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
