--- a/personal.html
+++ b/personal.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/hobbies.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body onload="init();">
     <header>
         <div class="logo">
             <img src="./assets/imgs/logo.png" id="logo" alt="logo">
@@ -103,11 +103,11 @@
     
           <h3>Photography</h3>
           <figure id ="bigPlace">
-            <img src = "./assets/imgs/photo01.png" alt = "Big Photo Holder" id ="bigPic">
+            <img src="./assets/imgs/photo01.png" alt="Big Photo Holder" id="bigPic">
             <figcaption id="cap"></figcaption>
         </figure>
-        <section class = "table">
-            <div id = "imgHolder">
+        <section class="table">
+            <div id="imgHolder">
                 <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo01.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
                 <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo02.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
                 <img onclick="changeMe(this)" alt ="photo" src="./assets/imgs/photo03.png" class="gallery" border = "0" onmouseover="this.style.cursor='pointer';">
@@ -119,7 +119,7 @@
             </div>
         </section>
           <h3>Videography</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/cOxuIegU408?si=8mrOtLJwGfHk0usT" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe style="width: 500px; height: 250px;" src="https://www.youtube.com/embed/cOxuIegU408?si=8mrOtLJwGfHk0usT" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </section>
         <section id="contactSection">
             <h3>Contact</h3>
