transgender first page

--- a/personal.html
+++ b/personal.html
@@ -21,13 +21,13 @@
             <div class="logo">
                 <img src="./assets/imgs/logo.png" alt="logo">
             </div>
-            <ul>
-                <li><a href="#homeSection" class="active">Home</a></li>
-                <li><a href="#aboutSection">About</a></li>
-                <li><a href="#educationSection">Education</a></li>
-                <li><a href="#projectsSection">Projects</a></li>
-                <li><a href="#hobbiesSection">Hobbies</a></li>
-                <li><a href="#contactSection">Contact</a></li>
+            <ul class="navUL">
+                <li class="navLi"><a href="#homeSection" class="active">Home</a></li>
+                <li class="navLi"><a href="#aboutSection">About</a></li>
+                <li class="navLi"><a href="#educationSection">Education</a></li>
+                <li class="navLi"><a href="#projectsSection">Projects</a></li>
+                <li class="navLi"><a href="#hobbiesSection">Hobbies</a></li>
+                <li class="navLi"><a href="#contactSection">Contact</a></li>
             </ul>
         </nav>
         <label for="nav_check" class="hamburger">
@@ -80,10 +80,10 @@
                 <span onclick="newElement()" class="addBtn">Add</span>
             </div> 
             <ul id="myUL">
-              <li class ="liToDo">Read a book</li>
-              <li class ="liToDo">Journal</li>
+              <li class="liToDo">Read a book</li>
+              <li class="liToDo">Journal</li>
               <li class="liToDo checked">Code JavaScript</li>
-              <li class ="liToDo">Buy Sonia a Birthday Card</li>
+              <li class="liToDo">Buy Sonia a Birthday Card</li>
             </ul>
             </div>
           </section>
