--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ LOVELIFETOPDOGONLINEiNLINE
 
 
     DISCORD RIT GIT EMAIL WHATSAPP TELEGRAM SLACK YOUTUBE TWITCH 
-    <a href="alexlalama.github.io/weChatQR">WeChat</a>
+    <a href="./weChatQR.jpg">WeChat</a>
     <a href="https://www.twitch.tv/alexlalama1" target="_blank">Twitch</a>
     <a href="">Git</a>
     <a href="">YouTube</a>
