--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ LOVELIFETOPDOGONLINEiNLINE
     DISCORD RIT GIT EMAIL WHATSAPP TELEGRAM SLACK YOUTUBE TWITCH 
     <a href="./weChatQR.jpg">WeChat</a>
     <a href="https://www.twitch.tv/alexlalama1" target="_blank">Twitch</a>
-    <a href="">Git</a>
+    <a href="#">Git</a>
     <a href="">YouTube</a>
     <a href="#" target="_blank"></a>
     <a href="https://calendly.com/a8293699" target="_blank">Calendly</a>
