--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     </head>
 <body>
 LOVELIFETOPDOGONLINEiNLINE 
-
-
-    DISCORD RIT GIT EMAIL WHATSAPP TELEGRAM SLACK YOUTUBE TWITCH 
+    <a href="https://discordapp.com/users/heartz0624/">DISCORD</a>
+    <a href="https://github.com/alexlalama">GITHUB</a>
+    <a href="mailto:anl7149@rit.com">E-MAIL</a>
+    <a href="https://wa.me/7322855261">WHATSAPP</a>
+    <a href="#">TELEGRAM</a>
     <a href="./weChatQR.jpg">WeChat</a>
     <a href="https://www.twitch.tv/alexlalama1" target="_blank">Twitch</a>
     <a href="#">Git</a>
-    <a href="">YouTube</a>
-    <a href="#" target="_blank"></a>
+    <a href="https://www.youtube.com/@alexlalama1">YouTube</a>
     <a href="https://calendly.com/a8293699" target="_blank">Calendly</a>
     Copyright &copy; 2024 Alexandra Lalama. All rights reserved.
 </body>
