--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ LOVELIFETOPDOGONLINEiNLINE
     <a href="#">TELEGRAM</a>
     <a href="./weChatQR.jpg">WeChat</a>
     <a href="https://www.twitch.tv/alexlalama1" target="_blank">Twitch</a>
-    <a href="#">Git</a>
+    <a href="#">Gi</a>
     <a href="https://www.youtube.com/@alexlalama1">YouTube</a>
     <a href="https://calendly.com/a8293699" target="_blank">Calendly</a>
     Copyright &copy; 2024 Alexandra Lalama. All rights reserved.
