--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
-    <title>Alexandra Lalama - Resume</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
-    <link rel="stylesheet" href="./assets/css/contact.css">
+    <link rel="stylesheet" href="./assets/styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/contact.css">
+
+    <title>Alexandra L | Contact</title>
 </head>
 <body>
-    <div class="container">
-        <div class="top"> 
-            <p id="name">Webpage by Alexandra Lalama</p> 
-        </div>
-        <nav>
-            <ul class="nav">
-                <li id="home"><a href="index.html">Home</a></li>
-                <li><a href="aboutMe.html">About Me</a></li>
-                <li class="dropdown"><a href="#">Clothing</a>
-                <!-- <ul class="dropdown-ul">
-                    <li><a href="https://issuederror.com/">Issued Error</a></li>
-                </ul> -->
-                </li>
-                <li class="dropdown">
-                    <a href="#">Production</a>
-                    <!-- <ul class="dropdown-ul">
-                        <li><a href="#">Music</a></li>
-                        <li><a href="#">Photo</a></li>
-                        <li><a href="#">Video</a></li>
-                        <li><a href="#">Mix, DJ</a></li>
-                    </ul> -->
-                </li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <a href="#">&#xf09b;</a>
-            <!-- LinkedIn, YouTube -->
-            <!-- submit email + message -->
-            <fieldset>
-            <form action="#">
-                <p id="sendmsg">Connect</p>
-                <input type="text" id="msg" placeholder="Type a message" name="msg">
-                <br>
-                <input type="email" placeholder="Enter your E-mail address"><br><br>
-                <input type="submit" id="submit" name="submit">
-            </form>
-        </fieldset>how
-        </main>
-        <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+    <nav> 
+        <div><a href="index.html">Home</a></div>
+        <div><a href="education.html">Education</a></div>
+        <div><a href="experience.html">Experience</a></div>
+        <div><a href="projects.html">Projects</a></div>
+        <div><a href="hobbies.html">Hobbies</a></div>
+        <div><a href="contact.html">Contact</a></div>
+    </nav>
+    <div id="links">
+        <div class="link"><a href="https://www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"><img id="linkedin"src="./assets/img/linkedin.png" alt="LinkedIn"/></a></div>
+        <div class="link"><a href="https://github.com/alexlalama" target="_blank"><img id="github" src="./assets/img/github.png" alt="Github"/></a></div>
+        <div class="link"><a href="mailto:alexlalamaemail@gmail.com" target="_blank"><img id="email" src="./assets/img/mail-1454734_640.png" alt="E-Mail"/></a></div>    
+        <div class="link"><a href="#" target="_blank"><img id="whatsapp" src="./assets/img/whatsapp.png" alt="Whatsapp"/></a></div>
+        <div class="link"><a href="#" target="_blank"><img id="wechat" src="#" alt="WeChat"/></a></div>
     </div>
+    <div id="footer">&copy; Alexandra Lalama | <a href="./index.html"> Home </a></div>
 </body>
 </html>
