--- a/contact.html
+++ b/contact.html
@@ -7,36 +7,26 @@
     <link rel="stylesheet" href="./assets/css/contact.css">
 </head>
 <body>
-    <div class="container">
-        <div class="top"> 
-            <p id="name">Webpage by Alexandra Lalama</p> 
+    <nav>
+            <div><a href="index.html">Home</a></div>
+            <div><a href="about.html">About</a></div>
+            <div><a href="education.html">Education</a></div>
+            <div><a href="experience.html">Experience</a></div>
+            <div><a href="contact.html">Contact</a></div>
+    </nav>
+    <main>
+        <h1>Contact</h1>
+        <div id="contacts">
+        <!-- LinkedIn, YouTube -->
+            <a href="https://www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"><img src="./assets/media/img/InBug-Black.png" alt="LinkedIn"></a>
+            <a href="#"><img src="./assets/media/img/github-mark-white.png" alt="Git"></a>
+            <a href="#"><img src="./assets/media/img/yt_logo_rgb_light.png" alt="YouTube"></a>
+            <a href="https://calendly.com/a8293699" target="_blank"><img src="./assets/media/img/Calendly_idkbixDmT2_1.png" alt="Calendly"></a>
+            <a href="https://www.twitch.tv/alexlalama1" target="_blank"><img src="./assets/media/img/twitch_wordmark_flat_purple.png" alt="Twitch"></a>
+            <a href="./weChatQR.jpg" target="_blank"><img src="./assets/media/img/#" alt="WeChat"></a> 
         </div>
-        <nav>
-            <ul class="nav">
-                <li id="home"><a href="index.html">Home</a></li>
-                <li><a href="aboutMe.html">About Me</a></li>
-                <li class="dropdown"><a href="#">Clothing</a>
-                <!-- <ul class="dropdown-ul">
-                    <li><a href="https://issuederror.com/">Issued Error</a></li>
-                </ul> -->
-                </li>
-                <li class="dropdown">
-                    <a href="#">Production</a>
-                    <!-- <ul class="dropdown-ul">
-                        <li><a href="#">Music</a></li>
-                        <li><a href="#">Photo</a></li>
-                        <li><a href="#">Video</a></li>
-                        <li><a href="#">Mix, DJ</a></li>
-                    </ul> -->
-                </li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <a href="#">&#xf09b;</a>
-            <!-- LinkedIn, YouTube -->
-            <!-- submit email + message -->
-            <fieldset>
+        <!-- submit email + message -->
+        <fieldset>
             <form action="#">
                 <p id="sendmsg">Connect</p>
                 <input type="text" id="msg" placeholder="Type a message" name="msg">
@@ -44,9 +34,12 @@
                 <input type="email" placeholder="Enter your E-mail address"><br><br>
                 <input type="submit" id="submit" name="submit">
             </form>
-        </fieldset>how
-        </main>
-        <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+        </fieldset>
+    </main>
+    <div class="footer">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
     </div>
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
