--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
         <title>Home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/css/index.css">
     </head>
 <body>
-LOVELIFETOPDOGONLINEiNLINE 
-
-
-    DISCORD RIT GIT EMAIL WHATSAPP TELEGRAM SLACK YOUTUBE TWITCH 
-    <a href="./weChatQR.jpg">WeChat</a>
-    <a href="https://www.twitch.tv/alexlalama1" target="_blank">Twitch</a>
-    <a href="#">Git</a>
-    <a href="">YouTube</a>
-    <a href="#" target="_blank"></a>
-    <a href="https://calendly.com/a8293699" target="_blank">Calendly</a>
-    Copyright &copy; 2024 Alexandra Lalama. All rights reserved.
+    <nav>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="about.html">About</a></div>
+        <div><a href="education.html">Education</a></div>
+        <div><a href="experience.html">Experience</a></div>
+        <div><a href="projects.html">Projects</a></div>
+        <div><a href="contact.html">Contact</a></div>
+    </nav>
+    <main>
+        <h1>Home</h1>
+        <p>
+            Hi, welcome to the home page.
+        </p>
+    </main>
+    <div class="footer">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
