--- a/personal.html
+++ b/personal.html
@@ -22,7 +22,7 @@
                 <img src="./assets/imgs/logo.png" alt="logo">
             </div>
             <ul class="navUL">
-                <li class="navLi"><a href="#homeSection" class="active">Home</a></li>
+                <li class="navLi"><a href="index.html" class="active">Home</a></li>
                 <li class="navLi"><a href="#aboutSection">About</a></li>
                 <li class="navLi"><a href="#educationSection">Education</a></li>
                 <li class="navLi"><a href="#projectsSection">Projects</a></li>
