--- a/about.html
+++ b/about.html
@@ -3,43 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex's About Page</title>
-    <link rel="stylesheet" href="./assets/css/personal.css">
+    <title>About Page</title>
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="./assets/imgs/logo.png" id="logo" alt="logo">
-        </div>
-        <input type="checkbox" id="nav_check" hidden>
         <nav>
-            <div class="logo">
-                <img src="./assets/imgs/logo.png" alt="logo">
-            </div>
-            <ul class="navUL">
-                <li class="navLi"><a href="personal.html">Home</a></li>
-                <li class="navLi"><a href="about.html" class="active">About</a></li>
-                <li class="navLi"><a href="#">Education</a></li>
-                <li class="navLi"><a href="#">Projects</a></li>
-                <li class="navLi"><a href="#">Hobbies</a></li>
-                <li class="navLi"><a href="#">Contact</a></li>
-            </ul>
+            <div><a href="index.html">Home</a></div>
+            <div><a href="about.html">About</a></div>
+            <div><a href="education.html">Education</a></div>
+            <div><a href="experience.html">Experience</a></div>
+            <div><a href="contact.html">Contact</a></div>
         </nav>
-        <label for="nav_check" class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </label>
+        
     </header>
     <main>
-    <h3>About</h3>
-    <p>
+    <h1>About</h1>
+    <p id ="about">
         As you probably know, my name is Alex Lalama. I currently live in New
-        Jersey and have a ton of hobbies including producing music, reading,
-        drawing, coding, and enjoying nature. I currently attend Rutgers
-        University. If you would like to read more about my courses, professors,
-        and previous education such as where I transferred from before Rutgers,
-        please visit my <a href="#educationSection">Education</a> section.
+        Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="education.html">Education</a> page.
         <br><br>
         I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
@@ -47,6 +29,20 @@
         find more about my specific hobbies and what I have created you can
         visit my <a href="#hobbiesSection">Hobbies</a> section.
       </p>
+
+      <p id="#hobbiesSection">
+        <h3>Photos</h3>
+        
+        <img src="./assets/media/img/photo03.png" alt="flowers">
+        <img src="./assets/media/img/photo04.png" alt="squirrel">
+        <img src="./assets/media/img/photo13.jpg" alt="motocyle">
+      </p>
     </main>
+    <div class="footer">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+
 </body>
 </html>
