--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
             <div><a href="about.html">About</a></div>
             <div><a href="education.html">Education</a></div>
             <div><a href="experience.html">Experience</a></div>
+            <div><a href="projects.html">Projects</a></div> 
             <div><a href="contact.html">Contact</a></div>
         </nav>
         
@@ -43,6 +44,5 @@
         <a href="contact.html">Contact</a>
     </div>
     <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
-
 </body>
 </html>
