--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
     <link rel="stylesheet" href="./assets/css/index.css"> 
-    <script type="module" async src="./assets/js/projects.js"></script>
-
+    <script type="module" defer src="./assets/js/projects.js"></script>
 </head>
 <nav>
         <div><a href="index.html">Home</a></div>
