edit index footer

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             Hi, welcome to the home page.
         </p>
     </main>
-    <div class="footer">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
-    </div>
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved. |<a href="index.html">Home</a>|
+        <a href="contact.html">Contact</a></footer>
 </body>
 </html>
