--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             Hi, welcome to the home page.
         </p>
     </main>
-
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved. |<a href="index.html">Home</a>|
-        <a href="contact.html">Contact</a></footer>
+    <div class="footer">
+        <a href="index.html">Home</a> |
+        <a href="contact.html">Contact</a>
+    </div>
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
