link rel update

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./assets/styles/contact.css">
+    <link rel="stylesheet" href="./assets/styles/index.css">
     <title>Alexandra L | Contact</title>
 </head>
 <body>
