--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
         <title>Home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/css/index.css">
+        <!-- <link rel="stylesheet" href="./assets/css/index.css"> -->
     </head>
 <body>
+    <div>Alexandra Lalama</div>
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
-        <div><a href="education.html">Education</a></div>
-        <div><a href="experience.html">Experience</a></div>
         <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
     </nav>
     <main>
-        <h1>Home</h1>
-        <p>
-            Hi, welcome to the home page.
-        </p>
+        <img src="#" alt="home_photo" />
+        <div id="home_text">Hi, welcome to my website.</div>
     </main>
     <div class="footer">
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
     </div>
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
