--- a/about.html
+++ b/about.html
@@ -3,43 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <title>About</title>
+    <!-- <link rel="stylesheet" href="./assets/css/index.css"> -->
 </head>
 <body>
-        <nav>
-            <div><a href="index.html">Home</a></div>
-            <div><a href="about.html">About</a></div>
-            <div><a href="education.html">Education</a></div>
-            <div><a href="experience.html">Experience</a></div>
-            <div><a href="projects.html">Projects</a></div> 
-            <div><a href="contact.html">Contact</a></div>
-        </nav>
+    <nav>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="about.html">About</a></div>
+        <div><a href="projects.html">Projects</a></div> 
+        <div><a href="contact.html">Contact</a></div>
+    </nav>
     <main>
-    <h1>About</h1>
-    <p id ="about">
+    <div>Alexandra Lalama</div>
+    <div id ="about">
         As you probably know, my name is Alex Lalama. I currently live in New
-        Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="education.html">Education</a> page.
+        Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="#educationSection">Education</a> section.
         <br><br>
         I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
         expand my design skills within coding, using DAWS, and instruments. To
         find more about my specific hobbies and what I have created you can
         visit my <a href="#hobbiesSection">Hobbies</a> section.
-      </p>
-
-      <p id="#hobbiesSection">
+    </div>
+    <p id = "#educationSection">
+        <div class="school">
+                <div class="title">Middlesex County College</div>
+                <div class="degree">A.A.S in Computer Science</div>
+                <div class="concentration">Network and Administration Support</div>
+            </div>        
+        </br>
+            <div class="school">
+                <div class="title">Rochester Institute of Technology</div>
+                <div class="degree">B.S. in Computing and Information Technology </div> 
+                <div class="awards">Dean's List in Spring of 2022</div>
+            </div>
+    </p>
+    <p id="#hobbiesSection">
         <h3>Photos</h3>
         
         <img src="./assets/media/img/photo03.png" alt="flowers">
         <img src="./assets/media/img/photo04.png" alt="squirrel">
         <img src="./assets/media/img/photo13.jpg" alt="motocyle">
       </p>
+
+    <p id="experience">
+    <div class="job">
+            <div class="title">Dishwasher</div>
+            <div class="duration">May 2025 - Present</div>
+        </div>
+        <div class="company">Anthony's Coal Fired Pizza</div>
+        <div class="job">
+            <div class="title">Student Worker</div>  
+            <div class="duration">May 2024 - Aug 2024</div>
+        </div>
+        <div class="company">Rutgers' University Office of Registrar<div>
+        <div class="job">
+            <div class="title">Cook</div>
+            <div class="duration">May 2024 - Aug 2024</div>
+        </div>
+        <div class="company">Bowlero Corporation</div>
+        <div class="job">
+            <div class="title">Retail Sales Print Associate</div>           
+            <div class="duration">May 2023 – Aug 2023</div>
+        </div>
+        <div class="company">Staples</div>
+        <div class="job">
+            <div class="title">In – Store Shopper</div>           
+            <div class="duration">Jun 2022 – Aug 2022</div>
+        </div>
+        <div class="company">Whole Foods Market</div>
+        <div class="job">
+            <div class="title">FOH Team Member</div>
+            <div class="duration">Jul 2016 – Dec 2016</div>
+        </div>
+        <div class="company">Chick-Fil-A</div>
+    </p>
     </main>
     <div class="footer">
-        <a href="index.html">Home</a>
+        <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
     </div>
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
+
