--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,10 @@
             </footer>
             </div>
             </div>
-    <div id="footer">&copy; Alexandra Lalama |<a href="./index.html">Home </a></div>
+    <div class="footer">
+        <a href="index.html">Home</a> |
+        <a href="contact.html">Contact</a>
+    </div>
+    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
