--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./assets/css/index.css">
-    <title>Alexandra L | Contact</title>
+    <title>Contact</title>
 </head>
 <body>
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
-        <div><a href="education.html">Education</a></div>
-        <div><a href="experience.html">Experience</a></div>
         <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
     </nav>
     <main>
-        <h1>Contact</h1>
+        <div>Alexandra Lalama</div>
         <div id="contacts">
         <!-- LinkedIn, YouTube -->
             <a href="https://www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"><img src="./assets/media/img/InBug-Black.png" alt="LinkedIn"></a>
             <a href="#"><img src="./assets/media/img/github-mark-white.png" alt="Git"></a>
-            <a href="#"><img src="./assets/media/img/yt_logo_rgb_light.png" alt="YouTube"></a>
             <a href="https://calendly.com/a8293699" target="_blank"><img src="./assets/media/img/Calendly_idkbixDmT2_1.png" alt="Calendly"></a>
-            <a href="https://www.twitch.tv/alexlalama1" target="_blank"><img src="./assets/media/img/twitch_wordmark_flat_purple.png" alt="Twitch"></a>
-            <a href="./weChatQR.jpg" target="_blank"><img src="./assets/media/img/#" alt="WeChat"></a> 
         </div>
         <!-- submit email + message -->
         <fieldset>
@@ -37,9 +32,9 @@
         </fieldset>
     </main>
     <div class="footer">
-        <a href="index.html">Home</a>
+        <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
     </div>
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
 </body>
 </html>
