--- a/about.html
+++ b/about.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <!-- <link rel="stylesheet" href="./assets/css/index.css"> -->
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
+    <div>Alexandra Lalama</div>
+
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
@@ -14,7 +16,6 @@
         <div><a href="contact.html">Contact</a></div>
     </nav>
     <main>
-    <div>Alexandra Lalama</div>
     <div id ="about">
         As you probably know, my name is Alex Lalama. I currently live in New
         Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="#educationSection">Education</a> section.
@@ -25,7 +26,7 @@
         find more about my specific hobbies and what I have created you can
         visit my <a href="#hobbiesSection">Hobbies</a> section.
     </div>
-    <p id = "#educationSection">
+    <p id = "educationSection">
         <div class="school">
                 <div class="title">Middlesex County College</div>
                 <div class="degree">A.A.S in Computer Science</div>
@@ -38,7 +39,7 @@
                 <div class="awards">Dean's List in Spring of 2022</div>
             </div>
     </p>
-    <p id="#hobbiesSection">
+    <p id="hobbiesSection">
         <h3>Photos</h3>
         
         <img src="./assets/media/img/photo03.png" alt="flowers">
