add h2 of education and hobbies

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
         visit my <a href="#hobbiesSection">Hobbies</a> section.
     </div>
     <p id = "educationSection">
+        <h2>Education</h2>
         <div class="school">
                 <div class="title">Middlesex County College</div>
                 <div class="degree">A.A.S in Computer Science</div>
@@ -40,6 +41,7 @@
             </div>
     </p>
     <p id="hobbiesSection">
+        <h2>Hobbies</h2>
         <h3>Photos</h3>
         
         <img src="./assets/media/img/photo03.png" alt="flowers">
