add h2 of experience

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
       </p>
 
     <p id="experience">
+    <h2>Experience</h2>
     <div class="job">
             <div class="title">Dishwasher</div>
             <div class="duration">May 2025 - Present</div>
