nav removal education html

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
-        <div><a href="education.html">Education</a></div>
+        <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
 </nav>
 <div class="game-container">
