--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <script type="module" async src="./assets/js/projects.js"></script>
 </head>
+<body>
 <div>Alexandra Lalama</div>
 <nav>
         <div><a href="index.html">Home</a></div>
