--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div>Alexandra Lalama</div>
-
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
@@ -18,13 +17,13 @@
     <main>
     <div id ="about">
         As you probably know, my name is Alex Lalama. I currently live in New
-        Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="#educationSection">Education</a> section.
+        Jersey. I currently attend Middlesex County College and study CS in a concentration of Network and Administration Support. If you would like to read more about my courses and previous education please visit my <a href="educationSection">Education</a> section.
         <br><br>
         I have an interest in digitally producing music and learning new things.
         After college, I aim to work in the tech or music industry where I can
         expand my design skills within coding, using DAWS, and instruments. To
         find more about my specific hobbies and what I have created you can
-        visit my <a href="#hobbiesSection">Hobbies</a> section.
+        visit my <a href="hobbiesSection">Hobbies</a> section.
     </div>
     <p id = "educationSection">
         <h2>Education</h2>
