--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </nav>
     <main>
         <img src="#" alt="home_photo" />
-        <div id="home_text">Hi, welcome to my website.</div>
+        <div id="home_text">
+            Hi, welcome to my website. My name is Alexandra Lalama and this is my site.
+            
+            On the <a href="about.html">About</a> page there is information about my education, hobbies, and projects.
+        </div>
     </main>
     <div class="footer">
         <a href="index.html">Home</a> |
