--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
         <h2>Hobbies</h2>
         <h3>Photos</h3>
         
-        <img src="./assets/media/img/photo03.png" alt="flowers">
-        <img src="./assets/media/img/photo04.png" alt="squirrel">
+        <img src="./assets/media/img/photo03.png" alt="flowers" style="max-width: 100px; max-height: 100px">
+        <img src="./assets/media/img/photo04.png" alt="squirrel"style="max-width: 100px; max-height: 100px">
         <img src="./assets/media/img/photo13.jpg" alt="motocyle">
       </p>
 
