--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./assets/css/index.css">
     </head>
 <body>
+    <div class="box">
     <div>Alexandra Lalama</div>
     <nav>
         <div><a href="index.html">Home</a></div>
@@ -27,5 +28,6 @@
         <a href="contact.html">Contact</a>
     </div>
     <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
+    </div>
 </body>
 </html>
