--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="./assets/css/index.css">
     </head>
 <body>
-    <div class="box">
     <div>Alexandra Lalama</div>
     <nav>
         <div><a href="index.html">Home</a></div>
@@ -19,15 +18,16 @@
         <img src="#" alt="home_photo" />
         <div id="home_text">
             Hi, welcome to my website. My name is Alexandra Lalama and this is my site.
-            
             On the <a href="about.html">About</a> page there is information about my education, hobbies, and projects.
         </div>
     </main>
-    <div class="footer">
+    <footer>
+        <div>
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
-    </div>
-    <footer>Copyright &copy; 2025 Alexandra Lalama. All rights reserved.</footer>
-    </div>
+        </div>
+        Copyright &copy; 2025 Alexandra Lalama. All rights reserved.
+    </footer>
+    
 </body>
 </html>
