--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div id="contacts">
         <!-- LinkedIn, YouTube -->
             <a href="https://www.linkedin.com/in/alexandra-lalama-67497a205" target="_blank"><img src="./assets/media/img/InBug-Black.png" alt="LinkedIn"></a>
-            <a href="#"><img src="./assets/media/img/github-mark-white.png" alt="Git"></a>
+            <a href="#"  target="_blank"><img src="./assets/media/img/github-mark-white.png" alt="Git"></a>
             <a href="https://calendly.com/a8293699" target="_blank"><img src="./assets/media/img/Calendly_idkbixDmT2_1.png" alt="Calendly"></a>
         </div>
         <!-- submit email + message -->
