name attribute for div

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <div>Alexandra Lalama</div>
+    <div class="name">Alexandra Lalama</div>
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
