--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <script type="module" async src="./assets/js/projects.js"></script>
 </head>
 <body>
-<div>Alexandra Lalama</div>
+<div class="name">Alexandra Lalama</div>
 <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
