--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/index.css">
     </head>
 <body>
-    <div>Alexandra Lalama</div>
+    <div class="name">Alexandra Lalama</div>
     <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="about.html">About</a></div>
