--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="./assets/css/index.css"> 
-    <script type="module" async src="./assets/js/projects.js"></script>
+    <script type="module" src="./assets/js/projects.js"></script>
 </head>
 <body>
 <div class="name">Alexandra Lalama</div>
@@ -62,7 +62,7 @@
                     <button data-key="u">u</button>
                     <button data-key="i">i</button>
                     <button data-key="o">o</button>
-                    <button data-key="p">q</button>
+                    <button data-key="p">p</button>
                 </div>
                 <div class="row middle">
                     <button data-key="a">a</button>
@@ -78,13 +78,13 @@
                 </div>
                 <div class="row">
                     <button data-key="ENTER">ENTER</button>
-                    <button data-key="p">z</button>
-                    <button data-key="p">x</button>
-                    <button data-key="p">c</button>
-                    <button data-key="p">v</button>
-                    <button data-key="p">b</button>
-                    <button data-key="p">n</button>
-                    <button data-key="p">m</button>
+                    <button data-key="z">z</button>
+                    <button data-key="x">x</button>
+                    <button data-key="c">c</button>
+                    <button data-key="v">v</button>
+                    <button data-key="b">b</button>
+                    <button data-key="n">n</button>
+                    <button data-key="m">m</button>
                     <button data-key="DELETE">DELETE</button>
                 </div>
             </footer>
