--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <script type="module" src="./assets/js/projects.js"></script>
+    <script type="module" src="./assets/js/searhc.js"></script>
 </head>
 <body>
 <div class="name">Alexandra Lalama</div>
@@ -15,7 +16,8 @@
         <div><a href="projects.html">Projects</a></div>
         <div><a href="contact.html">Contact</a></div>
 </nav>
-<div class="game-container">
+
+<!--<div class="game-container"> 
                 <header>
                 <h1><span>ALEX'S</span> WORDLE</h1>    
                 </header>
@@ -90,6 +92,30 @@
             </footer>
             </div>
             </div>
+        -->
+            <!--
+    <div id="placeholder"></div>
+    <div id="button-holders">
+        <button id="one">1</button>
+        <button id="two">2</button>
+        <button id="three">3</button>
+        <button id="plus">+</button>
+        <button id="four">4</button>
+        <button id="five">5</button>
+        <button id="six">6</button>
+        <button id="seven">7</button>
+        <button id="eight">8</button>
+        <button id="nine">9</button>
+        <button id="zero">0</button>
+        
+        <button id="minus">-</button>
+        <button id="divide">/</button>
+        <button id="mulitply">*</button>
+        <button id="equals">=</button>
+    </div>-->
+    <div id="search-holder">
+        
+    </div>
     <div class="footer">
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
