--- a/projects.html
+++ b/projects.html
@@ -116,9 +116,11 @@
     <div id="search-holder">
         
     </div>
-    <div class="footer">
+    <footer>
+        <div>
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
+        </div>
     </div>
     <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
 </body>
