--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,9 @@
         <a href="index.html">Home</a> |
         <a href="contact.html">Contact</a>
         </div>
-    </div>
-    <footer>Copyright &copy; 2024 Alexandra Lalama. All rights reserved.</footer>
+        Copyright &copy; 2024 Alexandra Lalama. All rights reserved.
+</footer>
+    
+    
 </body>
 </html>
