--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
         <button id="equals">=</button>
     </div>-->
     <div id="search-holder">
-        <button onclick="generate_four()">>4 x 4</button>
+        <button id ="four"onclick="generate_four()">>4 x 4</button>
     </div>
     <footer>
         <div>
