rock paper scissors

--- a/projects.html
+++ b/projects.html
@@ -112,9 +112,21 @@
         <button id="divide">/</button>
         <button id="mulitply">*</button>
         <button id="equals">=</button>
-    </div>-->
+    </div>
     <div id="search-holder">
         <button id ="four"onclick="generate_four()">4 x 4</button>
+    </div>
+    -->
+    <div>
+        <button id="play_game" onclick="play_game()">Play</button>
+        <input type="radio" id="rock" value="rock-paper-scissors"></input>
+        <label for="rock">rock</label><br>
+        <input type="radio" id="paper" value="rock-paper-scissors"></input>
+        <label for="paper">paper</label><br>
+        <input type="radio" id="scissors" value="rock-paper-scissors"></input>
+        <label for="scissors">scissors</label><br>
+        <img src="#" id="game_image">
+
     </div>
     <footer>
         <div>
