--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/index.css"> 
     <script type="module" src="./assets/js/projects.js"></script>
     <script type="module" src="./assets/js/searhc.js"></script>
+    <script type="module" src="./assets/js/calculator.js"></script>
 </head>
 <body>
 <div class="name">Alexandra Lalama</div>
@@ -117,17 +118,7 @@
         <button id ="four"onclick="generate_four()">4 x 4</button>
     </div>
     -->
-    <div>
-        <button id="play_game" onclick="play_game()">Play</button>
-        <input type="radio" id="rock" value="rock-paper-scissors"></input>
-        <label for="rock">rock</label><br>
-        <input type="radio" id="paper" value="rock-paper-scissors"></input>
-        <label for="paper">paper</label><br>
-        <input type="radio" id="scissors" value="rock-paper-scissors"></input>
-        <label for="scissors">scissors</label><br>
-        <img src="#" id="game_image">
 
-    </div>
     <footer>
         <div>
         <a href="index.html">Home</a> |
