--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
             </div>
         -->
             
-    <div id="placeholder"></div>
+    <div id="placeholder">
     <div id="button-holders">
         <button id="one">1</button>
         <button id="two">2</button>
@@ -113,6 +113,7 @@
         <button id="zero">0</button>
         <button id="equals">=</button>
         <button id="divide">/</button>
+    </div>
     </div>
     <!--
     <div id="search-holder">
