--- a/projects.html
+++ b/projects.html
@@ -95,25 +95,26 @@
             </div>
             </div>
         -->
-            
+
     <div id="placeholder">
-    <div id="button-holders">
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="plus">+</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="minus">-</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="mulitply">*</button>
-        <button id="zero">0</button>
-        <button id="equals">=</button>
-        <button id="divide">/</button>
-    </div>
+        <p id = "calculator-number"></p>
+        <div id="button-holders">
+            <button id="button1">1</button>
+            <button id="button2">2</button>
+            <button id="button3">3</button>
+            <button id="plus">+</button>
+            <button id="button4">4</button>
+            <button id="button5">5</button>
+            <button id="button6">6</button>
+            <button id="minus">-</button>
+            <button id="button7">7</button>
+            <button id="button8">8</button>
+            <button id="button9">9</button>
+            <button id="mulitply">*</button>
+            <button id="button0">0</button>
+            <button id="equals">=</button>
+            <button id="divide">/</button>
+        </div>
     </div>
     <!--
     <div id="search-holder">
