--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
             </div>
             </div>
         -->
-
+<main>
     <div id="placeholder">
         <p id = "calculator-number"></p>
         <div id="button-holders">
@@ -121,7 +121,7 @@
         <button id ="four"onclick="generate_four()">4 x 4</button>
     </div>
     -->
-
+</main>
     <footer>
         <div>
         <a href="index.html">Home</a> |
